# graph_homework

./: CMakeLists.txt  Circle.h  Color.h  DDA.cpp  Line.h  Oval.h  Point.h  Polygen.h  cut.h  fillArea.h  main.cpp
OpenGL/lib/: freeglut_static.lib  soil2-debug.lib
